# ovro-lwa-portal

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  404.html  ACCEPTANCE_CRITERIA_CHECK.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMMIT_SUMMARY.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  README.md  ROADMAP.md  SETUP_SUMMARY.md  codemeta.json  github-issues-zarr-chunk-docs.md  index.html  mkdocs.yml  objects.inv  onboarded.md  pixi.toml  pixi.toml.bak  pyproject.toml  research-zarr-chunk-optimization.md  sitemap.xml
.ci-helpers/: .env.example  README.md  download_test_fits.py
.claude/commands/: commit.md  create-issue.md  create-pr.md  docs.md  push.md  release.md
.devcontainer/: Dockerfile  devcontainer.json  onCreate.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  docs.yml  iga.yml  zizmor.yml
ISSUE_TEMPLATE/: Milestone_3_Core_Accessor_Layer.md
api/data-loading/: index.html
api/fits-to-zarr-xradio/: index.html
api/ingest/: index.html
api/radport-accessor/: index.html
api/viz-module/: index.html
contributing/contributing/: index.html
docs/: MIGRATION_GUIDE.md  QUICK_REFERENCE.md  chunking-fundamentals.md  chunking-read-optimization.md  chunking-write-path.md  index.md  open_dataset.md
docs/api/: data-loading.md  fits-to-zarr-xradio.md  ingest.md  radport-accessor.md  viz-module.md
docs/contributing/: contributing.md
docs/getting-started/: basic-plotting.md  coordinate-systems.md  installation.md  loading-data.md  quick-start.md
docs/guides/: architecture-decisions.md
docs/javascripts/: mermaid.js
docs/tutorials/: pulsar-dedispersion.md  spectral-mapping.md  transient-analysis.md
docs/user-guide/: animations.md  celestial-tracking.md  dispersion-measure.md  fits-to-zarr.md  interactive-visualization.md  loading-data.md  source-detection.md  spectral-analysis.md  visualization.md  wcs-coordinates.md
docs/user-guide/zarr-optimization/: chunking-benchmarking.md  chunking-cloud-storage.md  chunking-compression.md  chunking-decision-guide.md  chunking-fundamentals.md  chunking-read-optimization.md  chunking-write-path.md
getting-started/basic-plotting/: index.html
getting-started/coordinate-systems/: index.html
getting-started/installation/: index.html
getting-started/loading-data/: index.html
guides/architecture-decisions/: index.html
issues/: milestone-3-core-accessor-layer.md
notebooks/: .gitignore  README.md  astrowidget_demo.ipynb  basic_viz_test.ipynb  fits2zarr.ipynb  fits2zarr_and_viz_user_cases.ipynb  fits2zarr_with_coord.ipynb  interactive_viz_demo.ipynb  open_dataset_examples.ipynb  radport_test.ipynb
notebooks/test_fits_files/: .gitignore  README.md
search/: search_index.json
specs/001-build-an-ingest/: IMPLEMENTATION_STATUS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-build-an-ingest/contracts/: cli_api.md  core_api.md  discovery_api.md
src/ovro_lwa_portal/: __init__.py  accessor.py  fits_to_zarr.py  fits_to_zarr_xradio.py  io.py
src/ovro_lwa_portal/ingest/: README.md  __init__.py  cli.py  core.py  dewarp_convert.py  discovery.py  metadata_audit.py  prefect_workflow.py
src/ovro_lwa_portal/viz/: __init__.py  _data.py  _imports.py  components.py  dashboards.py  explorers.py  sky_viewer.py
tests/: __init__.py  conftest.py  test_accessor.py  test_ci_helpers.py  test_fits_to_zarr.py  test_import.py  test_io.py  test_io_integration.py  test_perf_realistic.py
tests/ingest/: __init__.py  test_cli.py  test_core.py  test_dewarp_convert.py  test_discovery.py  test_metadata_audit.py
tests/viz/: conftest.py  test_accessor_integration.py  test_dashboards.py  test_data.py  test_explorers.py  test_imports.py  test_sky_viewer.py
tutorials/pulsar-dedispersion/: index.html
tutorials/spectral-mapping/: index.html
tutorials/transient-analysis/: index.html
user-guide/animations/: index.html
user-guide/celestial-tracking/: index.html
user-guide/dispersion-measure/: index.html
user-guide/fits-to-zarr/: index.html
user-guide/interactive-visualization/: index.html
user-guide/source-detection/: index.html
user-guide/spectral-analysis/: index.html
user-guide/visualization/: index.html
user-guide/wcs-coordinates/: index.html
user-guide/zarr-optimization/chunking-benchmarking/: index.html
user-guide/zarr-optimization/chunking-cloud-storage/: index.html
user-guide/zarr-optimization/chunking-compression/: index.html
user-guide/zarr-optimization/chunking-decision-guide/: index.html
user-guide/zarr-optimization/chunking-fundamentals/: index.html
user-guide/zarr-optimization/chunking-read-optimization/: index.html
user-guide/zarr-optimization/chunking-write-path/: index.html
