[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ovro_lwa_portal"
dynamic = ["version"]
description = "Python library for radio astronomy data processing and visualization for the Owens Valley Radio Observatory - Long Wavelength Array (OVRO-LWA)"
readme = "README.md"
requires-python = ">=3.12,<3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "astropy>=7.1.0,<8",
    "xarray>=2025.9.1,<2026",
    "dask>=2025.9.1,<2026",
    # Pinned to Zarr v2 for now.
    # See https://github.com/casangi/xradio/issues/355
    "zarr>=2.16,<3",
    "numcodecs>=0.15,<0.16",
    "xradio[all]>=0.0.59,<0.1",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "portalocker>=2.8.0",
    "universal-pathlib>=0.2",
    "matplotlib>=3.8,<4",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest>=7",
    "pytest-cov",
    "pytest-xdist",
    "pytest-mock",
]
ci = [
    "s3fs>=2024.6.0",
    "tqdm>=4.67.1,<5",
    "python-dotenv>=1.2.1,<2",
]
prefect = [
    "prefect>=3.0.0",
]
remote = [
    "requests>=2.31.0",
    "s3fs>=2024.6.0",
    "gcsfs>=2024.6.0",
    "fsspec>=2024.6.0",
    "caltechdata_api>=1.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]
visualization = [
    "panel>=1.3,<2",
    "holoviews>=1.18,<2",
    "bokeh>=3.3,<4",
    "param>=2.0,<3",
    "ipyaladin>=0.5.0",
    "ipywidgets>=8.0,<9",
    "ipywidgets_bokeh>=1.5",
    "jupyter_bokeh>=4.0",
]
all = ["ovro_lwa_portal[dev,visualization]"]

[project.license]
file = "LICENSE"

[project.scripts]
ovro-ingest = "ovro_lwa_portal.ingest.cli:main"

[project.urls]
Homepage = "https://github.com/uw-ssec/ovro-lwa-portal"
Repository = "https://github.com/uw-ssec/ovro-lwa-portal.git"
Issues = "https://github.com/uw-ssec/ovro-lwa-portal/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ovro_lwa_portal/version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.sdist]
exclude = ["/tests"]

[tool.pytest.ini_options]
# Prefer the in-repo package under src/ so tests do not pick up a stale
# site-packages install when running from a git checkout (requires pytest>=7).
minversion = "7.0"
pythonpath = ["src"]
addopts = ["-vvv", "-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = false
filterwarnings = ["error"]
log_cli_level = "INFO"
testpaths = ["tests"]
markers = [
    "network: tests requiring network access (deselect with '-m \"not network\"')",
    "osn: tests requiring OSN credentials (deselect with '-m \"not osn\"')",
    "slow: performance tests on production-scale data (deselect with '-m \"not slow\"')",
    "dewarp: dewarp / cascade workflow (optional image_plane_correction; may be skipped on CI)",
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.12"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "ovro_lwa_portal.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
exclude = ["tests/**"]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "I",   # isort
    "ARG", # flake8-unused-arguments
    "C4",  # flake8-comprehensions
    "EM",  # flake8-errmsg
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL",  # pylint
    "PT",  # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RUF", # Ruff-specific
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "EXE", # flake8-executable
    "NPY", # NumPy specific rules
    "PD",  # pandas-vet
]
ignore = [
    "PLR09",   # Too many <...>
    "PLR2004", # Magic value used in comparison
    "ISC001",  # Conflicts with formatter
]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]

# Pixi configuration for dependency management
# For more information, see: https://pixi.sh/latest/build/python/
[tool.pixi.workspace]
# Pinned due to https://github.com/prefix-dev/pixi/issues/4723
requires-pixi = ">=0.55.0"
channels = ["https://prefix.dev/conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python-casacore = ">=3.7.1,<4"
mkdocs = ">=1.6.1,<2"
mkdocs-material = ">=9.7.1,<10"
mkdocstrings-python = ">=2.0.2,<3"

[tool.pixi.pypi-dependencies]
# Dependency to the local package in editable mode
ovro_lwa_portal = { path = ".", editable = true }

[tool.pixi.tasks]
docs-serve = { cmd = "mkdocs serve", description = "Serve the documentation site locally" }
rtd-publish = { cmd = "python -m mkdocs build --clean --site-dir $READTHEDOCS_OUTPUT/html --config-file mkdocs.yml", description = "Build docs for Read the Docs" }

[tool.pixi.environments]
default = { features = ["pre-commit", "gh-cli", "visualization"], solve-group = "default" }
onboard = { features = ["pre-commit", "gh-cli", "onboard", "visualization"], solve-group = "default" }
ci = ["ci"]
# Optional dewarp env is not declared here: the `dewarp` feature uses a local sibling path
# (`../image-plane-correction`) and would break `pixi lock` / CI without that checkout.
# To use it locally, add the line below under [tool.pixi.environments] and run `pixi lock`
# with the sibling repo present, then `pixi install -e dewarp` (see CONTRIBUTING.md).
# dewarp = { features = ["dewarp"], solve-group = "dewarp" }

# GitHub CLI feature for interacting with GitHub from the command line
[tool.pixi.feature.gh-cli.dependencies]
gh = ">=2.0.0"

# Pre-commit feature for code quality and consistency
[tool.pixi.feature.pre-commit.dependencies]
pre-commit = ">=4.3.0"
pytest = ">=7"
pytest-cov = ">=3.0.0"
nodejs = ">=20"

[tool.pixi.feature.pre-commit.tasks]
pre-commit-install = { cmd = "pre-commit install", description = "Install pre-commit hooks in the git repository" }
pre-commit-all = { cmd = "pre-commit run --all-files", description = "Run pre-commit checks on all files" }
pre-commit = { cmd = "pre-commit run", description = "Run pre-commit checks on staged files" }

# Interactive visualization feature (Panel/HoloViews/ipyaladin)
[tool.pixi.feature.visualization.pypi-dependencies]
panel = ">=1.3,<2"
holoviews = ">=1.18,<2"
bokeh = ">=3.3,<4"
ipyaladin = ">=0.7,<1"
# Local checkout (sibling of this repo by default); replaces PyPI astrowidget for dev.
astrowidget = { path = "../astrowidget", editable = true }
ipywidgets = ">=8.0,<9"
ipywidgets-bokeh = ">=1.5"
jupyter-bokeh = ">=4.0"
python-dotenv = ">=1.2.1,<2"
jupyterlab = ">=4.0"
s3fs = ">=2024.6.0"

# Dewarp / cascade (`image_plane_correction.flow`). Optional: requires a local editable
# checkout at `../image-plane-correction` (sibling of this repo). Not used by default
# or CI—enable via the `dewarp` Pixi environment (see CONTRIBUTING.md).
[tool.pixi.feature.dewarp.pypi-dependencies]
image-plane-correction = { path = "../image-plane-correction", editable = true }

# Linux: install JAX with the CUDA 12 extra (jax-cuda12-plugin + matching jaxlib wheels from PyPI).
[tool.pixi.feature.dewarp.target.linux-64.pypi-dependencies]
jax = { version = ">=0.4.30,<0.7", extras = ["cuda12"] }

# Onboarding feature for setting up the development environment
[tool.pixi.feature.onboard.pypi-dependencies]
ssec-cli = { git = "https://github.com/uw-ssec/ssec-cli.git" }

[tool.pixi.feature.onboard.tasks]
ssec-setup = { cmd = "ssec --install-completion", description = "Set up shell completion for ssec-cli" }
onboard = { cmd = "ssec onboard", description = "Run the onboarding process for the SSEC project", depends-on = [
    "pre-commit-install",
    "ssec-setup",
] }
